--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -3,7 +3,7 @@ source = $HOME/.config/hypr/mocha.conf
 $accent = $mauve
 $accentAlpha = $mauveAlpha
 $font = JetBrainsMono Nerd Font
-
+$dt_tm_pos = 55
 # GENERAL
 general {
     disable_loading_bar = true
@@ -13,9 +13,23 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/.config/backgrounds/shaded.png
-    blur_passes = 2
-    color = $base
+    # path = ~/.config/backgrounds/shaded.png
+    # blur_passes = 40
+    # color = rgba(0,0,0,0.9)
+    # color = rgba(25, 20, 20, 0.9)
+    # blur_passes = 2
+    path = screenshot
+
+    # solid black @ 0.9 opacity
+    color = rgba(25, 20, 20, 0.9)
+
+    # how many times to apply the blur (higher = smoother)
+    blur_passes = 3
+
+    # radius (in pixels) of each Gaussian blur pass
+    blur_size = 1
+    vibrancy_darkness = 0.9
+    brightness = 0.3
 }
 
 # TIME
@@ -23,11 +37,11 @@ label {
     monitor =
     text = cmd[update:30000] echo "$(date +"%R")"
     color = $text
-    font_size = 90
+    font_size = 60
     font_family = $font
-    position = -30, 0
-    halign = right
-    valign = top
+    position = 0, 15%
+    halign = center
+    valign = center
 }
 
 # DATE 
@@ -35,11 +49,11 @@ label {
     monitor = 
     text = cmd[update:43200000] echo "$(date +"%A, %d %B %Y")"
     color = $text
-    font_size = 25
+    font_size = 12
     font_family = $font
-    position = -30, -150
-    halign = right
-    valign = top
+    position = 0, 8%
+    halign = center
+    valign = center
 }
 
 # USER AVATAR
@@ -58,10 +72,13 @@ image {
 # INPUT FIELD
 input-field {
     monitor =
-    size = 300, 60
-    outline_thickness = 4
+    size = 20%, 6%
+    padding-left = 5px
+    padding-right = 5px
+    outline_thickness = 1
+    rounding = 5
     dots_size = 0.2
-    dots_spacing = 0.2
+    dots_spacing = 0.3
     dots_center = true
     outer_color = $accent
     inner_color = $surface0
@@ -73,7 +90,7 @@ input-field {
     fail_color = $red
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
     capslock_color = $yellow
-    position = 0, -35
+    position = 0, -5%
     halign = center
     valign = center
 }
