Added kitty and some config changes

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -15,8 +15,7 @@ background {
     monitor =
     # path = ~/.config/backgrounds/shaded.png
     # blur_passes = 40
-    # color = rgba(0,0,0,0.9)
-    # color = rgba(25, 20, 20, 0.9)
+    # color = rgba(0,0,0,0.9) color = rgba(25, 20, 20, 0.9)
     # blur_passes = 2
     path = screenshot
 
@@ -73,18 +72,19 @@ image {
 input-field {
     monitor =
     size = 20%, 6%
-    padding-left = 5px
-    padding-right = 5px
-    outline_thickness = 1
-    rounding = 5
+    outline_thickness = 2
+    rounding = 10
     dots_size = 0.2
     dots_spacing = 0.3
     dots_center = true
-    outer_color = $accent
-    inner_color = $surface0
+    dots_text_format = *
+    # outer_color = $accent
+    outer_color = rgba(ffffff11)
+    inner_color = rgba(00000099)
     font_color = $text
+    font_family = "FiraCode Nerd Font Mono"
     fade_on_empty = false
-    placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+    placeholder_text = 󰌾 Logged in as <span foreground="##ff0000"><b>$USER</b></span>
     hide_input = false
     check_color = $accent
     fail_color = $red
