--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -48,7 +48,7 @@ monitor=LVDS-1,preferred,1440x0,1
 ###################
 
 # Set programs that you use
-$terminal = wezterm
+$terminal = kitty
 $fileManager = nautilus
 $menu = wofi --show drun
 
@@ -91,11 +91,11 @@ general {
     gaps_in = 4.5
     gaps_out = 8.5
 
-    border_size = 1
+    border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
   # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border = rgba(ffffffee) rgba(000000ee) 45deg
+    col.active_border = rgba(ff0000cc) rgba(0000ffcc) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -117,7 +117,7 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -126,8 +126,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 10
+        passes = 4
 
         vibrancy = 0.1696
     }
