Added config files for waybar and some other config changes

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -65,6 +65,10 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar & swaync & hypridle & hyprpaper
 exec-once = /usr/lib/geoclue-2.0/demos/agent
+# exec-once = systemctl --user start hyprpolkitagent
+# exec-once = /usr/bin/xdg-desktop-portal-wlr
+exec-once = ~/.local/.scripts/autostart/generate-xauth.sh
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 render {
 cm_enabled=false
@@ -311,6 +315,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
+windowrulev2 = tile, class:^(Timeshift-gtk)$
+# windowrulev2 = focus, class:^(Timeshift-gtk)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
