Some config Changes

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -17,18 +17,19 @@ background {
     # blur_passes = 40
     # color = rgba(0,0,0,0.9) color = rgba(25, 20, 20, 0.9)
     # blur_passes = 2
-    path = screenshot
+    # path = screenshot
+    path = ~/.config/hypr/wallpapers/scene1.jpg
 
     # solid black @ 0.9 opacity
-    color = rgba(25, 20, 20, 0.9)
+    # color = rgba(25, 20, 20, 1)
 
     # how many times to apply the blur (higher = smoother)
     blur_passes = 3
 
     # radius (in pixels) of each Gaussian blur pass
-    blur_size = 1
-    vibrancy_darkness = 0.9
-    brightness = 0.3
+    blur_size = 7
+    # vibrancy_darkness = 0.9
+    brightness = 0.7
 }
 
 # TIME
@@ -38,7 +39,8 @@ label {
     color = $text
     font_size = 60
     font_family = $font
-    position = 0, 15%
+    # position = 0, 15%
+    position = 0, 10%
     halign = center
     valign = center
 }
@@ -50,7 +52,8 @@ label {
     color = $text
     font_size = 12
     font_family = $font
-    position = 0, 8%
+    # position = 0, 8%
+    position = 0, 3%
     halign = center
     valign = center
 }
@@ -76,8 +79,8 @@ input-field {
     rounding = 10
     dots_size = 0.2
     dots_spacing = 0.3
-    dots_center = true
-    dots_text_format = *
+    # dots_center = true
+    # dots_text_format = *
     # outer_color = $accent
     outer_color = rgba(ffffff11)
     inner_color = rgba(00000099)
@@ -90,7 +93,8 @@ input-field {
     fail_color = $red
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
     capslock_color = $yellow
-    position = 0, -5%
+    # position = 0, -5%
+    position = 0, -8%
     halign = center
     valign = center
 }
