--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -92,8 +92,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 4.5
-    gaps_out = 8.5
+    gaps_in = 3
+    gaps_out = 5
 
     border_size = 2
 
@@ -113,15 +113,15 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
-    rounding_power = 2
+    rounding = 3
+    rounding_power = 3
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
     shadow {
-        enabled = false
+        enabled = true
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -201,6 +201,7 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
+    kb_options = ctrl:swapcaps
     kb_layout = us
     kb_variant =
     kb_model =
