--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -13,8 +13,10 @@ window_padding_width 10 10
 background_opacity 0.85
 # background_opacity 1
 
+# shell zsh
+
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Kanagawa
 include current-theme.conf
 # END_KITTY_THEME
 
