Changed some configuration for Neovim and Hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -40,8 +40,8 @@ cursor {
 # monitor=LVDS-1,preferred,1594x0,1
 
 
-monitor=VGA-1,preferred,0x0,1
-monitor=LVDS-1,preferred,1440x0,1
+monitor=LVDS-1,preferred, 0x0,1
+monitor=VGA-1,preferred,1370x0,1
 
 ###################
 ### MY PROGRAMS ###
@@ -330,3 +330,9 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 
 # Firefox always opens on workspace 3
 windowrule=workspace 3,class:firefox
+
+# Binding workspaces
+workspace=1, monitor:LVDS-1
+workspace=2, monitor:LVDS-1
+workspace=3, monitor:LVDS-1
+workspace=4, monitor:LVDS-1
