Edited the tmux config file

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,13 +15,29 @@ set-option -g set-titles on # Enable titles for windows
 set-option -g set-titles-string "#{pane_title}" # Sets title of the window to the pane title
 
 bind c new-window -c "#{pane_current_path}" # Retains path upon opening a new window
-bind '"' split-window -c "#{pane_current_path}" # Retains path upon splitting window vertically
-bind '%' split-window -h -c "#{pane_current_path}" # Retains path upon splitting window horizontally
+
+bind | split-window -hc "#{pane_current_path}" # Retains path upon splitting window vertically
+bind "\\" split-window -fh -c "#{pane_current_path}" # Retains path upon splitting window vertically
+
+bind - split-window -vc "#{pane_current_path}" # Retains path upon splitting window horizontally
+bind "_" split-window -fv -c "#{pane_current_path}" # Retains path upon splitting window horizontally
 
 set-option -s focus-events on # "-s" = server option # Passes focus event from termianl to applications
 set-option -s extended-keys on
 
 set-option -s escape-time 0
+
+# Set key for sourcing .tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Set key for toggling to last window
+bind Space last-window
+
+# Set keys for resizing pane
+bind -r C-j resize-pane -D 15
+bind -r C-k resize-pane -U 15
+bind -r C-h resize-pane -L 15
+bind -r C-l resize-pane -R 15
 
 # set-option -g default-shell /usr/bin/zsh
 ##
