--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@ bind C-a send-prefix # (after pressing prefix key [C-a]) This option allows, pre
 set-option -g base-index 1 # This option sets the base index of windows to 1
 set-option -g pane-base-index 1 # This option sets the base index of panes to 1
 
-bind - move-window -r # Bind `-` key to refresh window numbering in the current session
+bind ")" move-window -r # Bind `-` key to refresh window numbering in the current session
 
 set-option -g mouse on # Enable mouse support
 
